package br.unitins.topicos1.dto;

public record CupomDTO(
        Long id,
        String codigo
    ) {     
}